fix: add gap between buttons and test recorder output

--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@
     line-height: 1.1;
     background: #222;
     color: #fff;
-    margin: 0;
+    margin: 6px 0 0 0;
     padding: 10px;
     font-size: 12px;
     overflow: auto;
